# py-kafka-sdk

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: consumer_example.py  producer_example.py
src/: __init__.py  config.py  consumer.py  producer.py
tests/: test_consumer.py  test_producer.py
