[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-kafka-sdk"
version = "0.1.1"
description = "A simple Python SDK for Apache Kafka"
authors = [
    { name = "Mateus Pereira" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "confluent-kafka",
    "python-dotenv"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
